--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".two.activity.TwoActivity" />
+        <activity android:name=".voids.activity.VoidActivity" />
     </application>
 
 </manifest>
